feat: Enhance documentation and help pages with detailed guides and FAQs, fixes #24 #25 #21 #23 and #22

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       content="A powerful, self-hostable SMS API built for affordability, flexibility, and local optimization."
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <title>QueueDriod</title>
+    <title>QueueDroid</title>
 
     <!-- this is to resolve issue in old safari browser in tablet -->
     <script src="https://cdn.jsdelivr.net/npm/resize-observer-polyfill@1.5.1/dist/ResizeObserver.min.js"></script>
   </head>
   <body>
-    <noscript>QueueDriod</noscript>
+    <noscript>QueueDroid</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
